# sdl2-opengl-basic

./: CMakeLists.txt  README.md
src/: main.cpp
